; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/executor/extr_tqueue.c_TupleQueueReaderNext.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/executor/extr_tqueue.c_TupleQueueReaderNext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_6__ = type { i8*, i32, i32, i32 }

@SHM_MQ_DETACHED = common dso_local global i64 0, align 8
@SHM_MQ_WOULD_BLOCK = common dso_local global i64 0, align 8
@SHM_MQ_SUCCESS = common dso_local global i64 0, align 8
@InvalidOid = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @TupleQueueReaderNext(%struct.TYPE_5__* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_6__, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %3
  %15 = load i32*, i32** %7, align 8
  store i32 0, i32* %15, align 4
  br label %16

16:                                               ; preds = %14, %3
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %6, align 4
  %21 = call i64 @shm_mq_receive(i32 %19, i32* %10, i8** %11, i32 %20)
  store i64 %21, i64* %9, align 8
  %22 = load i64, i64* %9, align 8
  %23 = load i64, i64* @SHM_MQ_DETACHED, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %25, label %31

25:                                               ; preds = %16
  %26 = load i32*, i32** %7, align 8
  %27 = icmp ne i32* %26, null
  br i1 %27, label %28, label %30

28:                                               ; preds = %25
  %29 = load i32*, i32** %7, align 8
  store i32 1, i32* %29, align 4
  br label %30

30:                                               ; preds = %28, %25
  store i32* null, i32** %4, align 8
  br label %51

31:                                               ; preds = %16
  %32 = load i64, i64* %9, align 8
  %33 = load i64, i64* @SHM_MQ_WOULD_BLOCK, align 8
  %34 = icmp eq i64 %32, %33
  br i1 %34, label %35, label %36

35:                                               ; preds = %31
  store i32* null, i32** %4, align 8
  br label %51

36:                                               ; preds = %31
  %37 = load i64, i64* %9, align 8
  %38 = load i64, i64* @SHM_MQ_SUCCESS, align 8
  %39 = icmp eq i64 %37, %38
  %40 = zext i1 %39 to i32
  %41 = call i32 @Assert(i32 %40)
  %42 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 3
  %43 = call i32 @ItemPointerSetInvalid(i32* %42)
  %44 = load i32, i32* @InvalidOid, align 4
  %45 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 2
  store i32 %44, i32* %45, align 4
  %46 = load i32, i32* %10, align 4
  %47 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 1
  store i32 %46, i32* %47, align 8
  %48 = load i8*, i8** %11, align 8
  %49 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  store i8* %48, i8** %49, align 8
  %50 = call i32* @heap_copytuple(%struct.TYPE_6__* %8)
  store i32* %50, i32** %4, align 8
  br label %51

51:                                               ; preds = %36, %35, %30
  %52 = load i32*, i32** %4, align 8
  ret i32* %52
}

declare dso_local i64 @shm_mq_receive(i32, i32*, i8**, i32) #1

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @ItemPointerSetInvalid(i32*) #1

declare dso_local i32* @heap_copytuple(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
